added sql db & repo methods